--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Vite + Lit</title>
     <link rel="stylesheet" href="./src/index.css" />
     <script type="module" src="/src/my-element.js"></script>
+    <script type="module" src="/src/hello.js"></script>
   </head>
   <body>
-    <my-element>
-      <h1>Vite + Lit</h1>
-    </my-element>
+    <ys-icons-hello></ys-icons-hello>
   </body>
 </html>
