--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Lit</title>
-    <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="/src/my-element.js"></script>
-    <script type="module" src="/src/hello.js"></script>
-  </head>
-  <body>
-    <ys-icons-hello></ys-icons-hello>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + Lit</title>
+  <!-- <link rel="stylesheet" href="./src/index.css" /> -->
+  <!-- <script type="module" src="/src/my-element.js"></script> -->
+  <script type="module" src="/src/hello.js"></script>
+</head>
+
+<body>
+  <ys-icons-hello style="width: 150px; height: 150px;"></ys-icons-hello>
+</body>
+
 </html>
